--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@material-tailwind/react": "^2.1.9",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
