--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.9",
+    "bootstrap": "^5.3.3",
     "next": "14.1.3",
     "react": "^18",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18",
     "swiper": "^11.0.7"
   },
